tests/baselines/reference/parserErrorRecovery_ModuleElement1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement1.ts(2,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement1.ts(4,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement1.ts (2 errors) ====
    return foo;
    }
    ~
!!! error TS1128: Declaration or statement expected.
    return bar;
    }
    ~
!!! error TS1128: Declaration or statement expected.